--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hosting Website</title>
-    <script type="module" src="../test.js"></script>
-    <link rel="stylesheet" id="cssLink" href="../css/styles.css">
+    <script type="module" src="test.js"></script>
+    <link rel="stylesheet" id="cssLink" href="./css/styles.css">
 </head>
 
 <body>
     <header class="navigation_bar">
-        <img class="logo" src="../images/CKHosting.png" alt="logo">
+        <img class="logo" src="./images/CKHosting.png" alt="logo">
         <nav>
             <ul class="nav_links">
-                <li><a href="services.html">Services</a></li>
+                <li><a href="./pages/services.html">Services</a></li>
                 <li><a href="#">Billing</a></li>
                 <li><a href="#">Game Pannel</a></li>
                 <li><a href="#">Server Status</a></li>
