added menu toggle

--- a/pages/services.html
+++ b/pages/services.html
@@ -17,6 +17,7 @@
                 <li class="services_tab">Services</li>
                 <li><a href="#">Billing</a></li>
                 <li><a href="#">Game Pannel</a></li>
+                <li><a href="#">Server Status</a></li>
             </ul>
         </nav>
         <a href="mailto:karlangelremo@gmail.com" class="cta"><button>Contact</button></a>
