Basic Nav Bar Mobile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header id="nav_bar_id" class="navigation_bar">
+    <header class="navigation_bar">
         <img class="logo" src="./images/CKHosting.png" alt="logo">
         <nav>
             <ul class="nav_links">
